Use SequencedCollection#getFirst
ImmutableCollections.List12 for example provides a (very slightly) faster path for it:
 - get is implemented as return index == 0 ? e0 : e1, as List12 is specialized for lists with 2 entries
 - while getFirst() is implemented as return e0; basically a direct field access, eliminating the if check of the index parameter

This ensures our fast-path for when only 1 listener exists is even faster.